# hermes-assistant

./: .gitignore  README.md  agent.py  app.py  chatbot.py  gradio_app.py  pyproject.toml  requirements.txt
static/: chat-only-index.html  prices.html
